2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	Regression bug fix: longest match variables broken by
	2011-09-28 commit which introduced the double var match.

	* match.c (match_line): Handle case where modifier is t.

	* parser.y (var_op): Produce modifir as (t) rather than t.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented choose and horizontal mode for paralle
	constructs.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	New directive: choose.

	* match.c (choose_s, longest_k, shortest_k): New variables.
	(match_line, match_files): Introduced choose directive.
	(match_init): Initialize new variables.

	* match.h (choose_s): Declared.

	* parser.l (yybadtoken): Handle CHOOSE.
	(CHOOSE): Clause added for returning this token.

	* parser.y: Added #include "match.h".
	(CHOOSE): New token symbol.
	(choose_clause): New nonterminal symbol.
	(clause): choose_clause added.
	(all_clause, some_clause, none_clause,  maybe_clause,
	cases_clause): Abstract syntax tree tweaked.
	(choose_clause): New syntax.
	(elem): Abstract syntax trees tweaked for many clauses.
	New CHOOSE clauses.
	(out_clause): New error case for choose_clause.

2011-09-30  Kaz Kylheku  <kaz@kylheku.com>

	* HACKING: Updated with debugging hints.

2011-09-29  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Clarified consecutive variables and documented double
	variable match.

2011-09-29  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Implemented backslash continuations in SPECIAL
	state, regexes and string literals.

	* txr.1: Documented.

2011-09-29  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_line): Implemented horizontal all, some,
	none, maybe and cases directives.
	(match_files): Recognize horizontal version of these directives
	by the presence of the extra symbol t and do not process.
	Also, bugfix in the all directive: not resetting the
	all_match flag when short circuiting out.
	* parser.y (clause_parts_h, additional_parts_h): New nonterminals.
	(elem): New clauses added.
