@@ -1,5 +1,11 @@
 2011-10-01  Kaz Kylheku  <kaz@kylheku.com>
 
+	* parser.y (all_clause, some_clause, none_clause, maybe_clause,
+	cases_clause, choose_clause, elem): Regression bug fix: bad list calls
+	in parser, lacking nao terminator.
+
+2011-10-01  Kaz Kylheku  <kaz@kylheku.com>
+
 	Regression bug fix: longest match variables broken by
 	2011-09-28 commit which introduced the double var match.
 
